testsuite/tests/esf/typecheck/should_fail/unbound_variable.sf
let x = 1 and
    y = x
in
1